--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,8 @@
 \section{Conclusion and Future Work}\label{Se:conclusion}
 
-In this paper, we articulated the problem of privacy enforcement in mobile systems as a classification problem. The traditional approach of information-flow tracking then becomes a ``binary'' classifier, which equates data leakage with source/sink data flow. We explored an alternative approach based on statistical classification, which addresses more effectively the inherent fuzziness in leakage judgements, accounting beyond data flow also for the amount and form of private information about to be released. We have instantiated our approach as the \Tool\ system, which is about to be featured in a commercial security product. Our experimental data establishes the high accuracy of \Tool\ as well as its applicability to real-world mobile apps.
+In this paper, we articulated the problem of privacy enforcement in mobile systems as a classification problem. 
+We explored an alternative to the traditional approach of information-flow tracking, based on statistical reasoning, which addresses more effectively the inherent fuzziness in leakage judgements. We have instantiated our approach as the \Tool\ system. Our experimental data establishes the high accuracy of \Tool\ as well as its applicability to real-world mobile apps.
 
-Moving forward, we have two main objectives. The first is to extend \Tool\ with additional feature types. Specifically, we would like to account for (i) sink properties, such as file access modes (private vs public), the target URL of HTTP communication (same domain or third party), etc; as well as (ii) the history of privacy-relevant API invocations up to the release point (checking e.g. if/which declassification operations were invoked). Our second objective is to optimize our flow-based method for detecting relevant values (see \secref{featext}) by applying (offline) static taint analysis to the subject program, e.g. using the FlowDroid tool~\cite{FARBBKTOM:TR13}.  
+%The traditional approach of information-flow tracking then becomes a ``binary'' classifier, which equates data leakage with source/sink data flow. We explored an alternative approach based on statistical classification, which addresses more effectively the inherent fuzziness in leakage judgements, accounting beyond data flow also for the amount and form of private information about to be released. We have instantiated our approach as the \Tool\ system, which is about to be featured in a commercial security product. Our experimental data establishes the high accuracy of \Tool\ as well as its applicability to real-world mobile apps.
+
+Moving forward, we have two main objectives. The first is to extend \Tool\ with additional feature types. Specifically, we would like to account for (i) sink properties, such as file access modes (private vs public), the target URL of HTTP communication (same domain or third party), etc; as well as (ii) the history of privacy-relevant API invocations up to the release point (checking e.g. if/which declassification operations were invoked). Our second objective is to optimize our flow-based method for detecting relevant values (see \secref{featext}) by applying (offline) static taint analysis to the subject program, e.g. using the FlowDroid tool~\cite{FARBBKTOM:PLDI14}.  
