--- a/introduction.tex
+++ b/introduction.tex
@@ -35,7 +35,7 @@ Concretely, we propose Bayesian classification. To label a release point as eith
 %
 There are many ways of defining the evidence. In this study, we concentrate on the data arguments flowing into release operations, though we intend to consider other classes of features in the future. (See \secref{conclusion}.)
 
-Specifically, we induce features over the private values stored on the device, and evaluate these features according to the level of similarity between the private values and those arising at release points. This distinguishes instances where data that is dependent on private values flows into a release point, but its structural and/or quantitative characteristics make it eligible for release, from illegitimate behaviors. Failure to make such distinctions is a common source of false alarms by the tainting approach~\cite{EGCCJMS:OSDI10}.
+Specifically, we induce features over the private values stored on the device, and evaluate these features according to the level of similarity between the private values and those arising at release points. This distinguishes instances where data that is dependent on private values flows into a release point, but its structural and/or quantitative characteristics make it eligible for release, from illegitimate behaviors. Failure to make such distinctions is a common source of false alarms suffered by the tainting approach~\cite{EGCCJMS:OSDI10}.
 
 To illustrate this notion of features, we return to the example in \figref{quantitative}. Because the IMSI number is considered private, we define a respective feature \emph{IMSI}. Assume that the concrete IMSI value is ``404685505601234''. Then the value arising at the {\tt log(...)} release point is ``IMSI: 404685xxxxxxxxx''. The quantitative similarity between these two values serves as evidence for the decision whether or not {\tt log(...)} is behaving legitimately. This style of reasoning is depicted in \figref{imsiAnalysis}.
 
