--- a/paper.bib
+++ b/paper.bib
@@ -1,23 +1,3 @@
-@String{popl = {POPL}}
-@String{pldi = {PLDI}}
-@String{cav = {CAV}}
-@String{tacas = {TACAS}}
-@String{sas = {SAS}}
-@String{vmcai = {VMCAI}}
-@String{esop = {ESOP}}
-@String{cc = {CC}}
-@String{ppopp = {PPOPP}}
-@String{paste = {PASTE}}
-@String{spin = {SPIN}}
-@String{aplas = {Proc. Asian Symp. on Programming Languages and Systems}}
-@String{forte = {Proc. Intl. Conf. on Formal Techniques for Networked and Distributed Systems}}
-@String{spaa = {Proc. Symp. on Parallelism in Algorithms and Architectures}}
-@String{charme = {Proc. Correct Hardware Design and Verification Methods}}
-@String{toplas = {ACM Transactions on Progrmming Languages and Systems}}
-@String{JavaTM = {{${\mathord{Java}}^{\mathord{TM}}$}}}
-@String{JavaBeansTM = {{${\mathord{JavaBeans}}^{\mathord{TM}}$}}}
-@String{LNCS =    {Lecture Notes in Computer Science}}
-
 @inproceedings{SMBK:SECRYPT13,
    author              = {G. Sarwar and
                           O. Mehani and
@@ -32,7 +12,7 @@
 @inproceedings{LJ:SEC13,
  author = {B. Livshits and J. Jung},
  title = {Automatic Mediation of Privacy-sensitive Resource Access in Smartphone Applications},
- booktitle = {Proceedings of the 22Nd USENIX Conference on Security},
+ booktitle = {USENIX Security},
  year = {2013},
  pages = {113--130}
 }
@@ -41,7 +21,7 @@
 @inproceedings {SDW:SEC12,
 author = {S. Shekhar and M. Dietz and D. S. Wallach},
 title = {AdSplit: Separating Smartphone Advertising from Applications},
-booktitle = {Proceedings of the 21st USENIX Security Symposium},
+booktitle = {USENIX Security},
 year = {2012},
 pages = {553-567}
 }
@@ -49,7 +29,7 @@ pages = {553-567}
 @inproceedings{EOMC:SEC11,
  author = {W. Enck and D. Octeau and P. McDaniel and S. Chaudhuri},
  title = {A Study of Android Application Security},
- booktitle = {Proceedings of the 20th USENIX Conference on Security},
+ booktitle = {USENIX Security},
  year = {2011},
  pages = {21--21}
 }
@@ -57,7 +37,7 @@ pages = {553-567}
 @inproceedings{PS:BIS07,
  author = {J. Piskorski and M. Sydow},
  title = {String Distance Metrics for Reference Matching and Search Query Correction},
- booktitle = {Proceedings of the 10th International Conference on Business Information Systems},
+ booktitle = {BIS},
  year = {2007},
  pages = {353--365}
 }
@@ -93,6 +73,7 @@ pages = {553-567}
                M. Sridharan and
                O. Weisman},
   title     = {TAJ: effective taint analysis of web applications},
+  booktitle = {PLDI},
   year      = {2009},
   pages     = {87-97}
 }
@@ -132,7 +113,7 @@ booktitle = {FASE},
                D. Wetherall},
   title     = {These aren't the droids you're looking for: retrofitting
                android to protect data from imperious applications},
-  booktitle = {ACM Conference on Computer and Communications Security},
+  booktitle = {CCS},
   year      = {2011},
   pages     = {639-652},
 }
@@ -140,7 +121,7 @@ booktitle = {FASE},
 @inproceedings{HHJSW:CCS11,
  author = {P. Hornyack and S. Han and J. Jung and S. Schechter and D. Wetherall},
  title = {These aren't the droids you're looking for: retrofitting android to protect data from imperious applications},
- booktitle = {Proceedings of the 18th ACM conference on Computer and communications security},
+ booktitle = {CCS},
  year = {2011},
  pages = {639--652}
 }
@@ -156,7 +137,7 @@ booktitle = {FASE},
 @inproceedings{GZJS:SPWMN12,
  author = {M. C. Grace and W. Zhou and X. Jiang and A. Sadeghi},
  title = {Unsafe exposure analysis of mobile in-app advertisements},
- booktitle = {Proceedings of the fifth ACM conference on Security and Privacy in Wireless and Mobile Networks},
+ booktitle = {WiSec},
  year = {2012},
  pages = {101--112}
 }
@@ -164,7 +145,7 @@ booktitle = {FASE},
 @inproceedings{RCE:CODASPY13,
  author = {V. Rastogi and Y. Chen and W. Enck},
  title = {AppsPlayground: automatic security analysis of smartphone applications},
- booktitle = {Proceedings of the third ACM conference on Data and application security and privacy},
+ booktitle = {CODAPSY},
  year = {2013},
  pages = {209--220}
 }
@@ -179,7 +160,7 @@ booktitle = {FASE},
 @inproceedings{GCCC:CSS12,
  author = {M. Graa and N. Cuppens-Boulahia and F. Cuppens and A. Cavalli},
  title = {Detecting control flow in smarphones: combining static and dynamic analyses},
- booktitle = {Proceedings of the 4th international conference on Cyberspace Safety and Security},
+ booktitle = {CSS},
  year = {2012},
  pages = {33--47}
 }
@@ -187,7 +168,7 @@ booktitle = {FASE},
 @inproceedings{WCGHHJSW:HOTOS13,
  author = {D. Wetherall and D. Choffnes and B. Greenstein and S. Han and P. Hornyack and J. Jung and S. Schechter and X. Wang},
  title = {Privacy revelations for web and mobile apps},
- booktitle = {Proceedings of the 13th USENIX conference on Hot topics in operating systems},
+ booktitle = {HotOS},
   year = {2011},
   pages = {21--21}
 }
@@ -211,8 +192,7 @@ booktitle = {FASE},
 @inproceedings{JHW:SPSM12,
  author = {J. Jung and S. Han and D. Wetherall},
  title = {Short paper: enhancing mobile application permissions with runtime feedback and constraints},
- booktitle = {Proceedings of the second ACM workshop on Security and privacy in smartphones and mobile devices},
- series = {SPSM '12},
+ booktitle = {SPSM},
  year = {2012},
  pages = {45--50}
 }
@@ -274,7 +254,7 @@ booktitle = {FASE},
 @inproceedings{YYZGNW:CCS13,
  author = {Z. Yang and M. Yang and Y. Zhang and G. Gu and P. Ning and X. S. Wang},
  title = {AppIntent: analyzing sensitive data transmission in android for privacy leakage detection},
- booktitle = {Proceedings of the 2013 ACM SIGSAC Conference on Computer and Communications Security},
+ booktitle = {CCS},
  year = {2013},
  pages = {1043--1054}
 }
@@ -282,7 +262,7 @@ booktitle = {FASE},
 @inproceedings{EGCCJMS:OSDI10,
  author = {W. Enck and P. Gilbert and B. Chun and L. P. Cox and J. Jung and P. McDaniel and A. N. Sheth},
  title = {TaintDroid: an information-flow tracking system for realtime privacy monitoring on smartphones},
- booktitle = {Proceedings of the 9th USENIX conference on Operating systems design and implementation},
+ booktitle = {OSDI},
  year = {2010},
  pages = {1--6}
 }
@@ -315,7 +295,7 @@ booktitle = {FASE},
 @inproceedings{BKR:SP09,
  author = {M. Backes and B. Kopf and A. Rybalchenko},
  title = {Automatic Discovery and Quantification of Information Leaks},
- booktitle = {Proceedings of the 2009 30th IEEE Symposium on Security and Privacy},
+ booktitle = {S\&P},
  year = {2009},
  pages = {141--153}
 }
@@ -323,8 +303,7 @@ booktitle = {FASE},
 @inproceedings{L:CSFW02,
  author = {G. Lowe},
  title = {Quantifying Information Flow},
- booktitle = {Proceedings of the 15th IEEE workshop on Computer Security Foundations},
- series = {CSFW '02},
+ booktitle = {CSFW},
  year = {2002},
  pages = {18--31}
 }
@@ -332,7 +311,7 @@ booktitle = {FASE},
 @inproceedings{NMS:PLAS09,
  author = {J. Newsome and S. McCamant and D. Song},
  title = {Measuring channel capacity to distinguish undue influence},
- booktitle = {Proceedings of the ACM SIGPLAN Fourth Workshop on Programming Languages and Analysis for Security},
+ booktitle = {PLAS},
  year = {2009},
  pages = {73--85}
 }
@@ -372,13 +351,11 @@ booktitle = {FASE},
  pages = {193--205}
 }
 
-@techreport{FARBBKTOM:TR13,
+@inproceedingst{FARBBKTOM:PLDI14,
 	AUTHOR =        {C. Fritz and S. Arzt, and S. Rasthofer and E. Bodden and A. Bartel and J. Klein and Y. Traon and D. Octeau and P. McDaniel},
   	TITLE =         {FlowDroid: Precise Context, Flow, Field, Object-sensitive and Lifecycle-aware Taint Analysis for Android Apps},
-  NUMBER =        {TUD-CS-2013-0113},
-  INSTITUTION =   {Secure Software Engineering Group, EC Spride},
-  YEAR  =         {2013},
-  URL = {https://www.informatik.tu-darmstadt.de/fileadmin/user_upload/Group_CASED/Publikationen/TUD-CS-2013-0113.pdf}
+  	booktitle = {PLDI},
+	year = {2014}
 }
 
 @Article{Welch:1947,
@@ -394,20 +371,20 @@ booktitle = {FASE},
 @InProceedings{Curtsinger:Livshits:Zorn:Seifert:2011,
   Title                    = {ZOZZLE: Fast and Precise In-Browser JavaScript Malware Detection},
   Author                   = {Charlie Curtsinger and Benjamin Livshits and Benjamin G. Zorn and Christian Seifert},
-  Booktitle                = {Proceedings of the 20th USENIX Security Symposium},
+  Booktitle                = {USENIX Security},
   Year                     = {2011},
   Pages                    = {33-48}
 }
 @InProceedings{Pelizzi:Sekar:2012,
   Title                    = {Protection, Usability and Improvements in Reflected XSS Filters},
   Author                   = {Riccardo Pelizzi and R. Sekar},
-  Booktitle                = {Proceedings of the 7th ACM Symposium on Information, Computer and Communications Security (ASIACCS)},
+  Booktitle                = {ASIACCS},
   Year                     = {2012},
   Pages                    = {5-5}
 }
 @InProceedings{Sekar:2009,
   Title                    = {An Efficient Black-box Technique for Defeating Web Application Attacks},
   Author                   = {R. Sekar},
-  Booktitle                = {Proceedings of the 16th Annual Network and Distributed System Security Symposium (NDSS)},
+  Booktitle                = {NDSS},
   Year                     = {2009}
 }
