--- a/abstract.tex
+++ b/abstract.tex
@@ -3,5 +3,5 @@ Mobile apps often require access to private data, such as the device ID or locat
 %
 This paper addresses the problem of privacy enforcement in mobile systems, which we formulate as a classification problem: When arriving at a privacy sink (e.g., database update or outgoing web message), the runtime system must classify the sink's behavior as either legitimate or illegitimate. The traditional approach of information-flow (or taint) tracking applies ``binary'' classification, whereby information release is legitimate iff there is no data flow from a privacy source to sink arguments. While this is a useful heuristic, it also leads to false alarms.
 
-We propose to address privacy enforcement as a learning problem, relaxing binary judgments into a quantitative/probabilistic mode of reasoning. Specifically, we propose a Bayesian notion of statistical classification, which conditions the judgment whether a release point is legitimate on the evidence arising at that point. In our concrete approach, implemented as the \Tool\ system which is soon to be featured in a commercial product, the evidence refers to the similarity between the data values about to be released and the private data stored on the device. Compared to TaintDroid, a state-of-the-art taint-based tool for privacy enforcement, \Tool\ is substantially more accurate. Applied to 54 top-popular Google Play apps, \Tool\ is able to detect \JCO{27}{64} privacy violations with only 1 false alarm.
+We propose to address privacy enforcement as a learning problem, relaxing binary judgments into a quantitative/probabilistic mode of reasoning. Specifically, we propose a Bayesian notion of statistical classification, which conditions the judgment whether a release point is legitimate on the evidence arising at that point. In our concrete approach, implemented as the \Tool\ system that is soon to be featured in a commercial product, the evidence refers to the similarity between the data values about to be released and the private data stored on the device. Compared to TaintDroid, a state-of-the-art taint-based tool for privacy enforcement, \Tool\ is substantially more accurate. Applied to 54 top-popular Google Play apps, \Tool\ is able to detect \JCO{27}{64} privacy violations with only 1 false alarm.
 \end{abstract} 
