--- a/exp1.tex
+++ b/exp1.tex
@@ -1,8 +1,8 @@
 \subsection{H1: Accuracy \JCO{}{of \Tool}}
 \label{Se:overhead}
-\JC{To assess the accuracy of \Tool, we compared it to that of TaintDroid --- a state-of-the-art information-flow tracking tool for privacy enforcement. Our experimental settings and results are described below.
+\JC{To assess the accuracy of \Tool, we compared it to that of TaintDroid, a state-of-the-art information-flow tracking tool for privacy enforcement. Our experimental settings and results are described below.
 
-\paragraph{Subjects} We applied both TaintDroid and \Tool\ to DroidBench --- an independent and publicly available collection of benchmarks serving as testing ground for both static and dynamic privacy enforcement algorithms.} DroidBench models a large set of realistic challenges in leakage detection, including precise tracking of sensitive data through containers, handling of callbacks, field and object sensitivity, lifecycle modeling, inter-app communication, reflection and implicit flows.
+\paragraph{Subjects} We applied both TaintDroid and \Tool\ to DroidBench, an independent and publicly available collection of benchmarks serving as testing ground for both static and dynamic privacy enforcement algorithms.} DroidBench models a large set of realistic challenges in leakage detection, including precise tracking of sensitive data through containers, handling of callbacks, field and object sensitivity, lifecycle modeling, inter-app communication, reflection and implicit flows.
 
 \JC{
 The DroidBench suite consists of 50 cases. We excluded from our experiment (i) 8 benchmarks that crash at startup, as well as (ii) 5 benchmarks that leak data via callbacks that we did not manage to trigger (e.g., {\tt onLowMemory()}),
@@ -12,16 +12,17 @@ The complete list of benchmarks that we used can be found in \tableref{accuracyD
 
 \paragraph{Methodology}
 For each benchmark, we measured the number of true-positive (TP), false-positive (FP) and false-negative (FN) results, and then calculated the \emph{precision} and \emph{recall} of each tool using the formulas below:
-$$\text{\emph{Precision}} = \frac{TP}{TP+FP}$$
-$$\text{\emph{Recall}} = \frac{TP}{TP+FN}$$
-
+\begin{center}
+\begin{tabular}{ccc}
+$\text{\emph{Precision}} = \frac{TP}{TP+FP}$ & &
+$\text{\emph{Recall}} = \frac{TP}{TP+FN}$ \\
+\end{tabular}
+\end{center}
 High precision implies that a technique returns few irrelevant results, whereas  high recall implies that it misses only few relevant ones. Since ideal techniques have both high recall and high precision, the F-measure is commonly used to combine
 both precision and recall into a single measure. The F-measure is defined as the harmonic mean of precision and recall, and is
 calculated as follows:
 $$\text{\emph{F-Measure}} = 2 \times \frac{Precision \times Recall}{Precision + Recall}$$
-
-The value of F-measure is high only when both precision and recall are high. We thus use the F-measure to evaluate the
-accuracy of each technique.}
+The value of F-measure is high only when both precision and recall are high. We thus use the F-measure for accuracy evaluation.}
 
 \begin{table*}
 %\setlength{\tabcolsep}{0.2em}
@@ -52,13 +53,13 @@ The results obtained for both TaintDroid and \Tool\ on version 1.1 of DroidBench
 	See archive file droidbench.zip available online at \href{https://www.dropbox.com/sh/ggrcvqsbkiubmlb/faSUXmr9xK}{https://www.dropbox.com/sh/ggrcvqsbkiubmlb/faSUXmr9xK}.
 }
 
-Overall, TaintDroid detects 31 true leakages while also reporting 17 false positives, whereas our approach suffers from 2 false negatives, discovering 29 of the true leakages while flagging only 1 false positive.
+Overall, TaintDroid detects 31 true leakages while also reporting 17 false positives, whereas our approach suffers from 2 false negatives, discovering 29 of the true leakages while flagging only 1 false alarm.
 We averaged the F-measure calculation across all benchmarks (0.66 for TaintDroid vs. 0.96 for \Tool). 
 We also provide the ``global'' score computed by considering all TP, FP and FN results together in parentheses  (0.78 vs 0.95).
 
 %We summarize the results as (i) the average across all app scores, shown outside the parentheses (0.96 for \Tool\ vs 0.69 for %TaintDroid), as well as (ii) the global accuracy score, computed as TPs / (TPs + FPs + Fns) (0.91 vs 0.65).
 
-The results mark \Tool\ as visibly more accurate than TaintDroid. To further confirm this observation, we performed a 
+The results mark \Tool\ as visibly more accurate than TaintDroid. To further confirm this observation, we performed
 Welch's T-Test: an adaptation of Student's T-Test intended to test the null hypothesis that the two population means (in our case, average F-measures) are equal. Welch's variant of the T-Test is used when two samples potentially have unequal variances~\cite{Welch:1947}.
 The result of applying the test rejects the null hypothesis and demonstrates that \Tool\ performs significantly better than TaintDroid (p-value $\ll$ 0.05),
 %The results mark \Tool\ as visibly more accurate than TaintDroid with respective accuracy scores of 0.96 vs 0.69, 
